// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders disabled button snapshot 1`] = `
<DocumentFragment>
  <button
    class="btn"
    disabled=""
  >
    Save
  </button>
</DocumentFragment>
`;

exports[`Button renders primary button snapshot 1`] = `
<DocumentFragment>
  <button
    class="btn btn-primary"
  >
    Save
  </button>
</DocumentFragment>
`;

exports[`Button renders secondary button snapshot 1`] = `
<DocumentFragment>
  <button
    class="btn btn-secondary"
  >
    Save
  </button>
</DocumentFragment>
`;
